--- a/Makefile.Durex
+++ b/Makefile.Durex
@@ -2,18 +2,18 @@ CC = gcc
 CFLAGS = -Wall -Wextra -Werror -g
 PFLAGS = -pthread
 
-NAME = Payload
+NAME = Durex
 FILES = cred_daemon.c \
 	lock_daemon.c srv_daemon.c \
 	main.c
 
-SRCS_DIR = srcs_payload
+SRCS_DIR = srcs_durex
 SRCS = $(addprefix $(SRCS_DIR)/,$(FILES))
 
 INCS_DIR = includes
 INCS = -I $(INCS_DIR)
 
-OBJS_DIR = objs_payload
+OBJS_DIR = objs_durex
 OBJS = $(addprefix $(OBJS_DIR)/,$(FILES:%.c=%.o))
 
 .PHONY: all
